# layer-retrieve-chunks-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  embed.py  logging_config.py  loki-config.yml  main.py  promtail-config.yml  pyproject.toml  query.py  requirements.txt  test.py  test_local.py  tmp.md
.github/workflows/: build.yml  docker-push.yml
app/: __init__.py  access.py  asyncio_util.py  config.py  embed.py  follow_up.py  logging_config.py  main.py  query.py  rag_answer.py  request_context.py  retrieval.py
app/http/: __init__.py  _correlation.py  embed.py  inference.py  rerank.py
app/qdrant/: __init__.py  client.py
docs/: access-control.md  follow-up-questions.md  log-json-schema.md  schema.md  smoke-tests.md  streaming.md
examples/: curl_v1_rag_query.sh
grafana/dashboards/: retrieve-chunks.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
src/retrieve_chunks/: __init__.py  config.py  embed.py  query.py
